--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-opencv-python==4.8.1.78
+# PyTorch with CUDA 12.8 support for RTX 5090 (install these first)
+--extra-index-url https://download.pytorch.org/whl/cu128
+torch==2.9.0+cu128
+torchvision==0.24.0+cu128
+torchaudio==2.9.0+cu128
+
+# Computer Vision and ML packages
+opencv-python>=4.9.0.80
+ultralytics>=8.1.0
+numpy>=1.24.0,<2.1.0
+Pillow>=10.0.0
+
+# API packages
 openai==1.3.7
 google-generativeai==0.3.2
+
+# Utility packages
 python-dotenv==1.0.0
-Pillow==10.1.0
-numpy==1.24.3
